# NTA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
src/: main.cpp  nbacklinkwidget.cpp  nbacklinkwidget.h  ncreatespacedialog.cpp  ncreatespacedialog.h  ncreatespacedialog.ui  neditorwidget.cpp  neditorwidget.h  nlinkmanager.cpp  nlinkmanager.h  nlinkwidget.cpp  nlinkwidget.h  nmainwindow.cpp  nmainwindow.h  nmainwindow.ui  nmd.cpp  nmd.h  nnoteexplorer.cpp  nnoteexplorer.h  note.h  nrenderwidget.cpp  nrenderwidget.h  nselectnotedialog.cpp  nselectnotedialog.h  nselectnotedialog.ui  nspacemanager.cpp  nspacemanager.h  nstartwindow.cpp  nstartwindow.h  nstartwindow.ui  nwidget.cpp  nwidget.h  nwidget.ui  nwidgetmanager.cpp  nwidgetmanager.h  space.cpp  space.h
tests/: CMakeLists.txt  NTestWidget.cpp  NTestWidget.h  createspacedialogtest.cpp  createspacedialogtest.h  createspacetest.cpp  createspacetest.h  main.cpp  nwidgetmanagertest.cpp  nwidgetmanagertest.h  openspacetest.cpp  openspacetest.h  spacemanagertest.cpp  spacemanagertest.h  spacetest.cpp  spacetest.h  startwindowtest.cpp  startwindowtest.h  testaddlink.cpp  testaddlink.h  testcreatenote.cpp  testcreatenote.h  testgetnotes.cpp  testgetnotes.h  testnwidget.cpp  testnwidget.h
